fix z-index body & footer GL-6327

--- a/app/static_src/less/pages/topic.less
+++ b/app/static_src/less/pages/topic.less
@@ -378,6 +378,7 @@
       left: 0;
       top: 95px;
       background-color: #fff;
+      z-index: 0;
     }
     // HACK: Only ios app, don't work padding-bottom on topicDetail-messages-body.....
     //       Should consider more smart solution.
@@ -522,6 +523,7 @@
       bottom: 0;
       left: 0;
       right: 0;
+      z-index: 1;
     }
     &-box {
       display: flex;
